--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <version>1.16.22</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.springboot</groupId>
+            <artifactId>best-pay-sdk</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
