--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  context-path: /wechatMall
+  port: 8888
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
@@ -6,9 +9,8 @@ spring:
     password: 111
   jpa:
     show-sql: true
-server:
-  context-path: /wechatMall
-  port: 8888
+  jackson:
+    default-property-inclusion: non_null  #exclude empty attributes
 
 #TRACE < DEBUG < INFO < WARN < ERROR < FATAL
 #logging:
